# pecs

./: CMakeLists.txt  LICENSE  README.md
include/bw/pecs/: component.h  entity.h  entity_manager.h  system.h
